--- a/CollisionsDB/CollisionsDB/appsettings.json
+++ b/CollisionsDB/CollisionsDB/appsettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CollisionConnection": "server=intex2-utahcrashes.cpwxtdcadzxj.us-east-1.rds.amazonaws.com;port=3306;database=intex2;user=admin;password=^cQTp%PhfmSc4=wSNVL9A$_=T"
+    "CollisionConnection": "server=intex2-utahcrashes.cpwxtdcadzxj.us-east-1.rds.amazonaws.com;port=3306;database=intex2;user=admin;password=^cQTp%PhfmSc4=wSNVL9A$_=T",
+    "CollisionsDBIdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=CollisionsDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
