--- a/CollisionsDB/CollisionsDB/CollisionsDB.csproj
+++ b/CollisionsDB/CollisionsDB/CollisionsDB.csproj
@@ -15,6 +15,9 @@
     <None Remove="Infrastructure\" />
     <None Remove="Models\ViewModels\" />
     <None Remove="Views\Account\" />
+    <None Remove="Views\Shared\Components\" />
+    <None Remove="Components\" />
+    <None Remove="Views\Shared\Components\Counties\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.22" />
@@ -35,5 +38,8 @@
     <Folder Include="Infrastructure\" />
     <Folder Include="Models\ViewModels\" />
     <Folder Include="Views\Account\" />
+    <Folder Include="Views\Shared\Components\" />
+    <Folder Include="Components\" />
+    <Folder Include="Views\Shared\Components\Counties\" />
   </ItemGroup>
 </Project>
