--- a/CollisionsDB/CollisionsDB/CollisionsDB.csproj
+++ b/CollisionsDB/CollisionsDB/CollisionsDB.csproj
@@ -83,5 +83,8 @@
     <None Include="wwwroot\bower\themify-icons\fonts\themify.svg" />
     <None Include="wwwroot\bower\themify-icons\ie7\ie7.js" />
     <None Include="wwwroot\bower\themify-icons\README.md" />
+    <None Include="wwwroot\cubeportfolio\img\cbp-sprite.psd" />
+    <None Include="wwwroot\cubeportfolio\js\jquery.cubeportfolio.js" />
+    <None Include="wwwroot\cubeportfolio\js\jquery.cubeportfolio.min.js" />
   </ItemGroup>
 </Project>
