--- a/CollisionsDB/CollisionsDB/CollisionsDB.csproj
+++ b/CollisionsDB/CollisionsDB/CollisionsDB.csproj
@@ -36,6 +36,7 @@
     <PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.11.0" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.2.7" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.22" />
+    <PackageReference Include="System.Drawing.Common" Version="5.0.3" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Infrastructure\" />
